<resources>
    <string name="app_name">MiUtn</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barrabusqueda">Busca apuntes</string>
    <string name="principalTextInicio">Tus materias hoy</string>
    <string name="principalTextSegundo">Tus materias</string>
    <string name="principalTextProximasFechas">Proximas fechas examen</string>
    <string name="temas_a_ver_hoy">Temas a ver hoy</string>
    <string name="listado_de_materias_que_se_pueden_cursar">Listado de materias que se pueden cursar</string>
    <string name="muestra_las_materias_que_puedo_cursar">Muestra las materias que puedo cursar</string>
    <string name="aca_tendria_que_ir_el_temario_de_la_materia">Aca tendria que ir el Temario de la materia</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="finales_restantes">Finales Restantes</string>
    <string name="registrarme">Registrarme</string>
    <string name="olvide_mi_clave">Olvide mi clave</string>
    <string name="ingresar">Ingresar</string>
    <string name="mensaje_bienvenida">Bienvenido! \n Iniciemos con algunos datos</string>
    <string name="correo">Correo</string>
    <string name="ingenieria">Ingenieria</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="continuar">Continuar</string>
    <string name="tengo_cuenta">Tengo Cuenta</string>
    <string name="legajo">Legajo</string>
    <string name="restaurar">Restaurar</string>
    <string name="long_shortcut">long test</string>
    <string name="short_shortcut">Perfil</string>
    <string name="short_others">others</string>
    <string name="eventDescription">Descripcion eventos\n</string>
    <string name="events">Proximos Eventos</string>
    <string name="title_activity_vista_markdown">VistaMarkdown</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="visto">Visto</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="widgetSaludo">Volvamos a repasar :)</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="saludosuperior">SaludoSuperior</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
</resources>