<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <com.airbnb.lottie.LottieAnimationView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:lottie_rawRes="@raw/loginanimation"
        android:id="@+id/loginAnimation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_repeatMode="reverse"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/loginAnimation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/loginInicioSeccion"
            android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                style="@style/TextoBienvenida"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUserName"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/usuario">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUserPass"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                android:hint="@string/clave">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/loginBotonIngresar"
                style="@style/TextoRegistro"
                android:text="@string/ingresar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olvide_mi_clave"
                style="@style/TextoRegistro"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextoRegistro"
                android:text="@string/registrarme"
                android:id="@+id/loginRegistrarme"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/loginLinearRegistrar"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_bienvenida"
                style="@style/TextoBienvenida"
                android:gravity="center"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginNombre"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="Nombre">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginCorreo"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/correo">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUser"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                app:suffixText="Usuario SIU"
                app:errorEnabled="true"
                android:hint="@string/nombre_usuario">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginCarrear"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:hint="@string/ingenieria">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/simple_items"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/registrarme"
            />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/loginTengoCuenta"
                android:layout_height="wrap_content"
                style="@style/TextoRegistro"
                android:text="Tengo Cuenta"/>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>