<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.principalFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10px"
    app:layout_anchor="@id/search_bar"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/principalTextInicio"
    android:layout_gravity="center"
    android:textStyle="bold"
    />
<com.google.android.material.divider.MaterialDivider
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_anchor="@id/Principal"
    app:layout_anchorGravity="bottom"
    android:layout_gravity="top"
    app:dividerInsetStart="16dp"
    app:dividerInsetEnd="16dp"
    android:layout_marginTop="5px"
    />
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RecyclerMismateriasHoy"
    />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/Principal"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="top"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        android:layout_marginTop="5px"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Apuntes"
    style="@style/TextosPrincipales"
    />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginVertical="10px"
        android:layout_height="wrap_content"
        android:contentDescription="@string/temas_a_ver_hoy"
        android:id="@+id/RecyclerTemasHoy"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        android:padding="10px"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/principalTextSegundo"
    android:textStyle="bold"
    android:layout_gravity="center"
    />
<com.google.android.material.divider.MaterialDivider
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_anchor="@id/Principal"
    app:layout_anchorGravity="bottom"
    android:layout_gravity="top"
    app:dividerInsetStart="16dp"
    app:dividerInsetEnd="16dp"
    android:layout_marginTop="5px"
    />
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RecyclerMismaterias"
    />
    <com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/principalTextProximasFechas"
    android:textStyle="bold"
    android:layout_gravity="center"
    />
<com.google.android.material.divider.MaterialDivider
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_anchor="@id/Principal"
    app:layout_anchorGravity="bottom"
    android:layout_gravity="top"
    app:dividerInsetStart="16dp"
    app:dividerInsetEnd="16dp"
    android:layout_marginTop="5px"
    />
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RecyclerProximasFechas"
    />

</LinearLayout>

</FrameLayout>